@startuml

title __APPLICATION's Class Diagram__\n

  package  {
    package application {
      class AverageSensor {
          - sensors : ArrayList<Sensor>
          - state : boolean
          + AverageSensor()
          + addSensor()
          + readings()
          + isOn()
          + on()
          + off()
          + measure()
      }
    }
  }
  

  package  {
    package application {
      class ConstantSensor {
          - param : int
          + ConstantSensor()
          + ConstantSensor()
          + isOn()
          + on()
          + off()
          + measure()
      }
    }
  }
  

  package  {
    package application {
      class Main {
          {static} + main()
          {static} - printLine()
      }
    }
  }
  

  package  {
    package application {
      interface Sensor {
          {abstract} + isOn()
          {abstract} + on()
          {abstract} + off()
          {abstract} + measure()
      }
    }
  }
  

  package  {
    package application {
      class Thermometer {
          - state : boolean
          + Thermometer()
          + isOn()
          + on()
          + off()
          + measure()
          + randomNumberRange()
      }
    }
  }
  

  AverageSensor -up-|> Sensor
  ConstantSensor -up-|> Sensor
  Thermometer -up-|> Sensor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
